# MeatMonitoring

./: README.md
cam_lcd/: CMakeLists.txt  partition data .txt  partitions.csv  sdkconfig  sdkconfig.old
cam_lcd/components/modules/: CMakeLists.txt
cam_lcd/components/modules/camera/: who_camera.c  who_camera.h
cam_lcd/components/modules/lcd/: logo&Icon.h  logo_en_240x240_lcd.h  who_lcd.c  who_lcd.h
cam_lcd/components/screen/: CMakeLists.txt  component.mk
cam_lcd/components/screen/controller_driver/st7789/: st7789.c
cam_lcd/components/screen/interface_driver/: scr_interface_driver.c
cam_lcd/main/: CMakeLists.txt  app_main.cpp
